# deoxys_control

./: .gitignore  README.md
deoxys/: InstallPackage
deoxys/config/: charmander.yml  joint-impedance-controller.yml  osc-pose-controller.yml
deoxys/deoxys/experimental/: motion_utils.py
deoxys/deoxys/utils/io_devices/: spacemouse.py
deoxys/examples/: joint_position_control.py  osc_control.py  run_deoxys_with_space_mouse.py
deoxys/franka-interface/src/: franka_control_node.cpp
deoxys/franka-interface/src/controllers/: osc_impedance.cpp
franka_async_controller/: CMakeLists.txt  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md  fr3_robot.urdf  fr3_robot_gripper.urdf  franka_async_controller.cpp  franka_async_controller.h  python_bindings.cpp  setup.py
